# opentelemetry-cpp

./: .gitignore  CMakeLists.txt  build.local.sh  build.sh  main.cpp
api/include/opentelemetry/common/: attribute_value.h  key_value_iterable.h  key_value_iterable_view.h  spin_lock_mutex.h  timestamp.h
api/include/opentelemetry/metrics/: meter.h  meter_provider.h  provider.h  sync_instruments.h
api/include/opentelemetry/nostd/: variant.h
exporters/otlp/include/opentelemetry/exporters/otlp/: otlp_metric_utils.h  otlp_populate_attribute_utils.h
exporters/otlp/src/: otlp_metric_utils.cc  otlp_populate_attribute_utils.cc
sdk/include/opentelemetry/sdk/common/: attribute_utils.h  attributemap_hash.h
sdk/include/opentelemetry/sdk/instrumentationscope/: instrumentation_scope.h
sdk/include/opentelemetry/sdk/metrics/: instruments.h  meter.h  meter_context.h  meter_context_factory.h  meter_provider.h  meter_provider_factory.h  metric_reader.h  provider.h  sync_instruments.h
sdk/include/opentelemetry/sdk/metrics/aggregation/: aggregation.h  aggregation_config.h  default_aggregation.h  drop_aggregation.h  histogram_aggregation.h  lastvalue_aggregation.h  sum_aggregation.h
sdk/include/opentelemetry/sdk/metrics/data/: metric_data.h  point_data.h
sdk/include/opentelemetry/sdk/metrics/export/: metric_producer.h
sdk/include/opentelemetry/sdk/metrics/state/: attributes_hashmap.h  filtered_ordered_attribute_map.h  metric_collector.h  metric_storage.h  multi_metric_storage.h  sync_metric_storage.h  temporal_metric_storage.h
sdk/include/opentelemetry/sdk/metrics/view/: attributes_processor.h
sdk/include/opentelemetry/sdk/resource/: resource.h
sdk/src/metrics/: meter.cc  meter_context.cc  meter_context_factory.cc  meter_provider.cc  meter_provider_factory.cc  metric_reader.cc  provider.cc  sync_instruments.cc
sdk/src/metrics/aggregation/: histogram_aggregation.cc  lastvalue_aggregation.cc  sum_aggregation.cc
sdk/src/metrics/state/: filtered_ordered_attribute_map.cc  metric_collector.cc  sync_metric_storage.cc  temporal_metric_storage.cc
sdk/src/resource/: resource.cc
